--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 </ul>
             </nav>
         </div>
+        <div class="header__content">
+            <h1>Font-end</h1>
+        </div>
     </header>
 </body>
 </html>
