--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div class="header__content">
             <h1>Font-end</h1>
+            <p>Dev</p>
         </div>
     </header>
 </body>
