--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
         <div class="header__content">
-            <h1>Font-end</h1>
+            <h1>Back-end</h1>
             <p>Dev</p>
         </div>
     </header>
